Pushed to github

--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kingsolo50/githubSearchApp.git"
   }
 }
